--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <title>Dictionary App</title>
   </head>
   <body>
-    <div id="root"><h1>Hello world!</h1></div>
+    <div id="root"></div>
   </body>
 </html>
